--- a/assets/examples/base.css
+++ b/assets/examples/base.css
@@ -43,8 +43,6 @@ body {
     width: 200px;
     height: 200px;
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
     flex-direction: column;
     overflow-y: scroll;
     overflow-x: hidden;
